[tool.poetry]
name = "STREAMLINE"
version = "0.1.0"
description = "Automatic ML Algorithms Benchmark for multiclass classification task"
authors = ["Corentin Meyer <corentin.meyer@etu.unistra.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
skrebate = "0.7"
xgboost = "^1"
lightgbm = "^3"
optuna = "^2"
scikit-eLCS = "^1"
scikit-XCS = "^1"
scikit-ExSTraCS = "^1"
plotly = "^5"
ipykernel = "^6"
matplotlib = "^3"
seaborn = "^0"
ipywidgets = "^7"
widgetsnbextension = "^3"
kaleido = "0.2.1"
fpdf = "*"
jupyter = "^1"
gplearn = "^0.4.2"
scipy = "^1.8.1"
catboost = "^1.0.6"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
